# spyc

./: .flake8  .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml
spyc/: __init__.py  main.py  plot_options.json
spyc/helpers/: partnumber.py  spcfigure.py
tests/: Dummy Data 2.xlsx  Dummy Data.xlsx  test_spyc.py
