[tool.poetry]
name = "spyc"
version = "0.1.0"
description = "Simple tool to help plot SPC data from multiple locations for comparison"
authors = ["fanoway <86997883+fanoway@users.noreply.github.com>"]
readme = "README.MD"
homepage="https://github.com/fanoway/spyc"

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.1.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
rich-dataframe = "^0.2.0"
openpyxl = "^3.0.7"
ipywidgets = "^7.6.3"
dash = "^1.20.0"
docopt = "^0.6.2"
mainentry = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
tox = "^3.23.1"
pytest-cov = "^2.12.1"
mypy = "^0.910"
flake8 = "^3.9.2"
pylint = "^2.9.3"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spyc = "spyc.main:main"

[tool.black]
line-length = 79

[tool.tox]
# tox.ini
legacy_tox_ini = """
[tox]
isolated_build = True

[tox:.package]
# note tox will use the same python version as under what tox is installed to package
# so unless this is python 3 you can require a given python version for the packaging
# environment via the basepython key
basepython = python3

[testenv]
whitelist_externals = poetry

commands =

	poetry run black spyc/
	poetry run flake8 spyc/
	poetry run pylint spyc/ --exit-zero
	poetry run pylint spyc/ -E
	poetry run mypy spyc/
	poetry run pytest --cov=spyc tests/

"""
